# cmake-template

./: CMakeLists.txt  CMakePresets.json  README.md
FindWDK/cmake/: FindWdk.cmake
PLACEHOLDER_MYPROJ_MYEXE/: CMakeLists.txt
PLACEHOLDER_MYPROJ_MYEXE/src/: CMakeLists.txt  PLACEHOLDER_MYPROJ_MYEXE.cpp  PLACEHOLDER_MYPROJ_MYEXE.hpp  PLACEHOLDER_MYPROJ_MYEXE_main.cpp
PLACEHOLDER_MYPROJ_MYEXE/test/: CMakeLists.txt  test.cpp
PLACEHOLDER_MYPROJ_MYLIB/: CMakeLists.txt
PLACEHOLDER_MYPROJ_MYLIB/src/: CMakeLists.txt  PLACEHOLDER_MYPROJ_MYLIB.cpp
PLACEHOLDER_MYPROJ_MYLIB/src/include/: PLACEHOLDER_MYPROJ_MYLIB.hpp  PLACEHOLDER_MYPROJ_MYLIB_Export.h
PLACEHOLDER_MYPROJ_MYLIB/test/: CMakeLists.txt  test.cpp
PLACEHOLDER_MYPROJ_MYSTATICLIB/: CMakeLists.txt
PLACEHOLDER_MYPROJ_MYSTATICLIB/src/: CMakeLists.txt  PLACEHOLDER_MYPROJ_MYSTATICLIB.cpp
PLACEHOLDER_MYPROJ_MYSTATICLIB/src/include/: PLACEHOLDER_MYPROJ_MYSTATICLIB.hpp
PLACEHOLDER_MYPROJ_MYSTATICLIB/test/: CMakeLists.txt  test.cpp
PLACEHOLDER_MYPROJ_MYWINKMDRIVER/: CMakeLists.txt
PLACEHOLDER_MYPROJ_MYWINKMDRIVER/src/: CMakeLists.txt  PLACEHOLDER_MYPROJ_MYWINKMDRIVER.cpp
PLACEHOLDER_MYPROJ_MYWINKMLIB/: CMakeLists.txt
PLACEHOLDER_MYPROJ_MYWINKMLIB/src/: CMakeLists.txt  PLACEHOLDER_MYPROJ_MYWINKMLIB.cpp
PLACEHOLDER_MYPROJ_MYWINKMLIB/src/include/: PLACEHOLDER_MYPROJ_MYWINKMLIB.hpp
cmake/: EnsureGTest.cmake
