cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD_LIBRARIES "")

set_property(GLOBAL PROPERTY USER_FOLDERS ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /WX")

wdk_add_driver(PLACEHOLDER_MYPROJ_MYWINKMDRIVER
    PLACEHOLDER_MYPROJ_MYWINKMDRIVER.cpp
)
target_link_libraries(PLACEHOLDER_MYPROJ_MYWINKMDRIVER
   PLACEHOLDER_MYPROJ_MYWINKMLIB
)
